# lp-engine

./: CMakeLists.txt  Findlp-engine.cmake
include/lp-engine/: lp-engine.h  lpdictionary.h  lpengine.h  lpproblem.h
src/: .lp-engine.cpp.swp  lp-engine.cpp  lpdictionary.cpp  lpengine.cpp  lpproblem.cpp
tests/: CMakeLists.txt
tests/sample1/: CMakeLists.txt  main.cpp
